company details added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
         <!-- Services-->
         <services></services>
         <!-- Portfolio-->
+        <app-experience></app-experience>
         <!-- <portfilio></portfilio> -->
         <!-- Call to action-->
         <contact-us></contact-us>
