--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,9 +5,9 @@
       <!-- <a href={{data.instagram}} target="_blank"
         ><i class="fa fa-instagram"></i
       ></a> -->
-      <a href={{data.facebook}} target="_blank"
+      <!-- <a href={{data.facebook}} target="_blank"
         ><i class="fa fa-facebook"></i
-      ></a>
+      ></a> -->
       <a
         href={{data.linkedin}}
         target="_blank"
