--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -4,13 +4,124 @@
         <h2 class="text-center mt-0">My Stack</h2>
         <hr class="divider my-4" />
         <div class="row setCards">
-                <div class="card" style="width: 18rem;" *ngFor="let stack of data.stack">
+          <mat-tab-group>
+            <mat-tab label="Angular">
+              <div class="mat-tab-info">
+                <div>
+                  Experienced Angular Developer with 5+ years of experience.
+                  Expert in Angular with experience in versions above Angular 2+.
+                </div>
+                <div class="rating-section">
+                  <div></div>
+                  <div>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  </div>
+
+                </div>
+              </div>
+              
+            </mat-tab>
+            <mat-tab label="React">
+              <div class="mat-tab-info">
+              <div>
+                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
+                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
+              </div>
+              <div class="rating-section">
+                <div></div>
+                <div>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                </div>
+
+              </div>
+            </div> </mat-tab>
+            <mat-tab label="Javascript">
+              <div class="mat-tab-info">
+                <div>
+                  lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
+                  pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
+                </div>
+                <div class="rating-section">
+                  <div></div>
+                  <div>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  </div>
+  
+                </div>
+              </div>
+            </mat-tab>
+
+            <mat-tab label="Html"> <div class="mat-tab-info">
+              <div>
+                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
+                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
+              </div>
+              <div class="rating-section">
+                <div></div>
+                <div>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                </div>
+
+              </div>
+            </div></mat-tab>
+            <mat-tab label="Css"> <div class="mat-tab-info">
+              <div>
+                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
+                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
+              </div>
+              <div class="rating-section">
+                <div></div>
+                <div>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                </div>
+
+              </div>
+            </div></mat-tab>
+            <mat-tab label="Spring boot"> <div class="mat-tab-info">
+              <div>
+                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
+                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
+              </div>
+              <div class="rating-section">
+                <div></div>
+                <div>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                </div>
+
+              </div>
+            </div></mat-tab>
+          </mat-tab-group>
+          
+                <!-- <div class="card" style="width: 18rem;" *ngFor="let stack of data.stack">
                     <img src={{stack.image}} class="card-img-top" alt={{stack.name}}>
                     <div class="card-body">
                       <h5 class="card-title">{{stack.name}}</h5>
                       <p class="card-text">{{stack.description}}</p>
                     </div>
-                  </div>
+                  </div> -->
                   <!-- <div class="card" style="width: 18rem;">
                     <img src="assets/react.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
