--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9980,7 +9980,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   hr.divider {
     max-width: 3.25rem;
     border-width: 0.2rem;
-    border-color: #f4623a;
+    border-color: #fff;
   }
   
   hr.light {
