--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 text-center">
                 <h2 class="text-white mt-0">About me...! It's Interesting to say</h2>
                 <hr class="divider light my-4" />
-                <p class="text-white-50 mb-4">
+                <p class=" mb-4 headline">
                     Senior Front End/UI-Angular 2+ Developer with 5 years of hands-on experience efficiently coding websites and applications using modern HTML, CSS, and JavaScript, AngularX Translate designs to front-end code, estimate time and determine developer requirements and specifications. Collaborate with creative and development teams on the execution of ideas and projects
                 </p>
                 <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find My Skills</a>
