--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,7 +2,8 @@ a{
     margin: 0% 3%;
 }
 a:nth-child(1){
-  color: rgb(228, 9, 111);
+    color: rgb(9, 166, 228);
+  font-size: 20px;
 }
 a:nth-child(2){
     color: rgb(55, 133, 235);
