Updated tech stach

--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -1,7 +1,7 @@
 
 .site-section{
     background: #7cceed;
-    padding: 40px;
+    padding: 90px 40px 40px 40px;
     h1{
         color: #fff;
         font-size: 30px;
