--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -41,6 +41,7 @@ header.masthead {
     border-radius: 12px;
     padding: 0;
     cursor: pointer;
+    margin-top: 50px;
   }
   .front {
     display: block;
