--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -1,30 +1,5 @@
-.setCards{
-    justify-content: center;
-    .card{
-        margin: 2% 3% 2% 3%;
-        box-shadow: 1px 0px 14px #999595;
-        padding: 1% 1%;
-        border-radius: 6px;
-    }
-    .card:hover{
-            transition: all 0.7s;
-            box-shadow: 5px 15px 25px #797676;
-    }
-}
-.boxShadow{
-    box-shadow: 1px 0px 14px #999595;
-    padding: 3% 7%;
-    border-radius: 25px;
-    margin: 5% 3%;
-}
-.mat-tab-info{
-    height: 100px;
-    width: 100%;
-    margin-top: 30px;
-}
-hr.divider{
-    border-color: #7cceed;  
-}
+
+
 
 .rating-section{
     display: flex;
@@ -34,4 +9,26 @@ hr.divider{
         color: #52afec;
         margin-left: 20px;
     }
+}
+.card-footer{
+    // display: flex;
+    // justify-content: center;
+    // margin-top: 20px;
+    text-align: end;
+    i{
+        font-size: 20px;
+        color: #52afec;
+        margin-left: 10px;
+    }
+}
+.tech-img{
+    text-align: center;
+    overflow: hidden;
+    img{
+        width: auto;
+        height: 200px;
+    }
+}
+.card-padding{
+    padding: 18px 0px 0px 0px;
 }
