--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10137,3 +10137,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .text-white-75 {
     color: rgba(255, 255, 255, 0.75);
   }
+
+  html {
+    scroll-behavior: smooth;
+  }
