time line experience

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
         <!-- Services-->
         <services></services>
         <!-- Portfolio-->
-        <app-experience></app-experience>
+        <!-- <app-experience></app-experience> -->
         <!-- <portfilio></portfilio> -->
+        <app-timeline></app-timeline>
         <!-- Call to action-->
         <contact-us></contact-us>
         <!-- Contact-->
@@ -16,3 +17,4 @@
         <!-- Footer-->
        <app-footer></app-footer>
        
+      
