--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="bg-light py-5" *ngIf="data">
   <div class="container">
     <div class="small text-center text-muted">
-       {{data.description}}
+      <!-- Copyright &#169; DSK  -->
       <!-- <a href={{data.instagram}} target="_blank"
         ><i class="fa fa-instagram"></i
       ></a> -->
