--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -6,7 +6,7 @@ a{
   color: white !important;
 }
 .changeCOlor{
-  background: #0491c6;
+  background: #7cceed;
   transition: height 0.7s;
 }
 .collapsedBgColor{
