--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -11,13 +11,22 @@
       </div>
       <div class="col-lg-8 align-self-baseline">
         <h3 class="text-uppercase text-white font-weight-bold">DsK</h3>
-        <a href="#about"
+        <!-- <a href="#about"
           ><button class="pushable">
             <span class="front">
               Find Out More
             </span>
           </button></a
-        >
+        > -->
+        <a href="#about">
+        <div class="container">
+         
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+          
+        </div>
+      </a>
       </div>
     </div>
   </div>
