--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,4 +1,4 @@
-<div class="container-timeline" id="time-line-view">
+<div class="container-timeline container-padding" id="experience">
     <div class="col-md-12 mb-5">
         <div class="section-heading text-center">
             <h2 class="text-center mt-0">My Resume</h2>
@@ -6,15 +6,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 {{getClassForTimeline()}}">
             <div class="main-timeline2">
                 <div class="timeline">
                     <span class="icon fa fa-building-o"></span>
                     <a href="#" class="timeline-content">
-                            <div class="resume-item mb-4" >
-                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>March 2022 - Present</span>
-                                <h3> <span></span>Technical staff of Angular</h3>
-                                <p> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>TechMojo Solutions Private Limited</p>
+                            <div class="resume-item " >
+                                <h3> <span></span>Member technical staff</h3>
+                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>March 2022 - Present</span><br/>
+                                <span> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>TechMojo Solutions Private Limited</span><br/>
                                 <span class="school"> <span><i class="fa fa-location-arrow" aria-hidden="true"></i></span>Hyderabad, Telangana, India</span>
                             </div>
                     </a>
@@ -22,10 +22,10 @@
                 <div class="timeline">
                     <span class="icon fa fa-building-o"></span>
                     <a href="#" class="timeline-content">
-                            <div class="resume-item mb-4" >
-                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>Aug 2021 - Feb 2022</span>
-                                <h3> <span></span>Senior Software Engineer</h3>
-                                <p> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>BlueRose Technologies Private Limited</p>
+                            <div class="resume-item " >
+                                <h3> <span></span>Sr Software Engineer</h3>
+                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>Aug 2021 - Feb 2022</span><br/>
+                                <span> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>BlueRose Technologies Private Limited</span><br/>
                                 <span class="school"> <span><i class="fa fa-location-arrow" aria-hidden="true"></i></span>Hyderabad, Telangana, India</span>
                             </div>
                     </a>
@@ -33,10 +33,10 @@
                 <div class="timeline">
                     <span class="icon fa fa-building-o"></span>
                     <a href="#" class="timeline-content">
-                            <div class="resume-item mb-4" >
-                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span> Mar 2021 - Aug 2021</span>
-                                <h3> <span></span>Senior Software Developer</h3>
-                                <p> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>Utthunga Technologies Private Limited</p>
+                            <div class="resume-item " >
+                                <h3> <span></span>Sr Software Developer</h3>
+                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span> Mar 2021 - Aug 2021</span><br/>
+                                <span> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>Utthunga Technologies Private Limited</span><br/>
                                 <span class="school"> <span><i class="fa fa-location-arrow" aria-hidden="true"></i></span>Bengaluru, Karnataka, India</span>
                             </div>
                     </a>
@@ -44,22 +44,22 @@
                 <div class="timeline">
                     <span class="icon fa fa-building-o"></span>
                     <a href="#" class="timeline-content">
-                            <div class="resume-item mb-4" >
-                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>Oct 2020 - Feb 2021</span>
-                                <h3> <span></span>Senior Software Developer </h3>
-                                <p> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>IgluLabs Private Limited</p>
-                                <span class="school"> <span><i class="fa fa-location-arrow" aria-hidden="true"></i></span>Bengaluru, Karnataka, India</span>
+                            <div class="resume-item " >
+                                <h3> <span></span>Sr Software Developer </h3>
+                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>Oct 2020 - Feb 2021</span><br/>
+                                <span> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>IgluLabs Private Limited</span><br/>
+                                <span> <span><i class="fa fa-location-arrow" aria-hidden="true"></i></span>Bengaluru, Karnataka, India</span>
                             </div>
                     </a>
                 </div>
                 <div class="timeline">
                     <span class="icon fa fa-building-o"></span>
                     <a href="#" class="timeline-content">
-                            <div class="resume-item mb-4" >
-                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>Aug 2018 - Oct 2020</span>
+                            <div class="resume-item " >
                                 <h3> <span></span>Software Engineer</h3>
-                                <p> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>Envytee Info Solutions</p>
-                                <span class="school"> <span><i class="fa fa-location-arrow" aria-hidden="true"></i></span>Hyderabad, Telangana, India</span>
+                                <span class="date"><span><i class="fa fa-calendar-o" aria-hidden="true"></i></span>Aug 2018 - Oct 2020</span><br/>
+                                <span> <span><i class="fa fa-building-o" aria-hidden="true"></i></span>Envytee Info Solutions</span><br/>
+                                <span> <span><i class="fa fa-location-arrow" aria-hidden="true"></i></span>Hyderabad, Telangana, India</span>
                             </div>
                     </a>
                 </div>
