--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,6 @@
         <!-- Contact-->
         
         <!-- Footer-->
-       <app-footer></app-footer>
+       <!-- <app-footer></app-footer> -->
        
       
