--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav
   class="navbar navbar-expand-lg navbar-light fixed-top py-3"
   id="mainNav"
-  [ngClass]="{ changeCOlor: changeHeaderColor || collapseTheHeader }"
+  [ngClass]="{ changeColor: changeHeaderColor || collapseTheHeader }"
 >
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" (click)="scrollTop()"
+    <a class="navbar-brand" href="#"
       >Saikiran Duddukuri</a
     >
     <button id="collapse-button"
@@ -24,10 +24,10 @@
           <a class="nav-link" href="#about" (click)="closeMenu()">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#services" (click)="closeMenu()">Skills</a>
+          <a class="nav-link" href="#skills" (click)="closeMenu()">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#time-line-view" (click)="closeMenu()">Portfolio</a>
+          <a class="nav-link" href="#experience" (click)="closeMenu()">Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact" (click)="closeMenu()">Contact</a>
