--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,208 +1,12 @@
-<section class="page-section" id="services" *ngIf="data">
-  <div class="container">
+<section class="page-section container-padding" id="skills" *ngIf="data">
+  <div class="">
     <h2 class="text-center mt-0">My Stack</h2>
     <hr class="divider my-4" />
-    <!-- <div class="row setCards">
-          <mat-tab-group>
-            <mat-tab label="Angular">
-              <div class="mat-tab-info">
-                <div>
-                  Experienced Angular Developer with 5+ years of experience.
-                  Expert in Angular with experience in versions above Angular 2+.
-                </div>
-                <div class="rating-section">
-                  <div></div>
-                  <div>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  </div>
-
-                </div>
-              </div>
-              
-            </mat-tab>
-            <mat-tab label="React">
-              <div class="mat-tab-info">
-              <div>
-                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
-                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
-              </div>
-              <div class="rating-section">
-                <div></div>
-                <div>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                </div>
-
-              </div>
-            </div> </mat-tab>
-            <mat-tab label="Javascript">
-              <div class="mat-tab-info">
-                <div>
-                  lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
-                  pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
-                </div>
-                <div class="rating-section">
-                  <div></div>
-                  <div>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  </div>
-  
-                </div>
-              </div>
-            </mat-tab>
-
-            <mat-tab label="Html"> <div class="mat-tab-info">
-              <div>
-                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
-                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
-              </div>
-              <div class="rating-section">
-                <div></div>
-                <div>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                </div>
-
-              </div>
-            </div></mat-tab>
-            <mat-tab label="Css"> <div class="mat-tab-info">
-              <div>
-                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
-                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
-              </div>
-              <div class="rating-section">
-                <div></div>
-                <div>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                </div>
-
-              </div>
-            </div></mat-tab>
-            <mat-tab label="Spring boot"> <div class="mat-tab-info">
-              <div>
-                lorem pant lorem pant lorem pant lorem pantlorem pant pant lorem 
-                pantlorem pant pant lorem pantlorem pant pant lorem pantlorem pant
-              </div>
-              <div class="rating-section">
-                <div></div>
-                <div>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                  <span><i class="fa fa-star" aria-hidden="true"></i></span>
-                </div>
-
-              </div>
-            </div></mat-tab>
-          </mat-tab-group>
-          
-                 <div class="card" style="width: 18rem;" *ngFor="let stack of data.stack">
-                    <img src={{stack.image}} class="card-img-top" alt={{stack.name}}>
-                    <div class="card-body">
-                      <h5 class="card-title">{{stack.name}}</h5>
-                      <p class="card-text">{{stack.description}}</p>
-                    </div>
-                  </div> -->
-    <!-- <div class="card" style="width: 18rem;">
-                    <img src="assets/react.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">React JS</h5>
-                      <p class="card-text">I worked more than 1 year on React!.
-                            Good Hands on Experience on It.</p>
-                    </div>
-                  </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="assets/frontEnd.jfif" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Frontend Base Stack</h5>
-                      <p class="card-text">I worked more than 4 years on These tech stack..!.
-                        Having a deep Knowledge on each technology</p>
-                    </div>
-                  </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="assets/MEAN.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">MEAN Stack</h5>
-                      <p class="card-text">I worked 1 year on it!.
-                        Worked on a project using MEAN stack from scrath and completed three phases of it.</p>
-                    </div>
-                  </div> 
-          
-        </div> -->
-  
-
-    <!-- <mat-tab-group [backgroundColor]="'#000000'" mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
-      <mat-tab label="Metrics"> -->
-        <!-- <div class="progress-bars-data">
-          <div class="progress-container" *ngFor="let lang of data">
-            <h1>{{lang.name}}</h1>
-            <div class="progress {{lang.class}}">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [style]="getWidth(lang)"
-                aria-valuenow="lang.percentage" aria-valuemin="0" aria-valuemax="100">{{lang.percentage}}%</div>
-            </div>
-          </div>
-        </div> -->
-      <!-- </mat-tab> -->
-      <!-- <mat-tab label="Cards">
-        <div class="row row-cols-1 row-cols-md-3 g-4 cards-data">
-          <div class="col mb-5" *ngFor="let lang of data">
-            <div class="card h-80" [ngClass]="lang.padding ? 'card-padding' : '' ">
-              <div class="tech-img">
-                <img src={{lang.image}} class="card-img-top" alt="Skyscrapers" />
-              </div>
-
-              <div class="card-body">
-                <h5 class="card-title">{{lang.title}}</h5>
-                <p class="card-text">
-                  {{lang.discription}}
-
-                </p>
-                <h3 style="font-size: inherit;">Experience : {{lang.years}}</h3>
-              </div>
-              <div class="card-footer">
-                <ng-container *ngFor="let item of [].constructor(lang.rating); let i = index">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </ng-container>
-              </div>
-            </div>
-          </div>
-        </div>
-      </mat-tab>
-    </mat-tab-group> -->
-    
-
-
-    <div class="row">
+    <div class="row justify-align">
       <ng-container  *ngFor="let lang of data">
-        <div class="col-md-4 col-sm-12 d-none d-lg-block text-center stack-box">
+        <div class="{{getClass()}} text-center stack-box">
           <img class="rounded-circle shadow-1-strong mb-4"
-          src={{lang.image}} alt="avatar"
-            style="width: 150px;" />
-          <h5 class="mb-3">{{lang.name}}</h5>
-          <p>Photographer</p>
-          <p class="text-muted">
-            <i class="fas fa-quote-left pe-2"></i>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-            praesentium voluptatum deleniti atque corrupti.
-          </p>
+          src={{lang.image}} alt={{lang.name}}/>
           <ul class="list-unstyled d-flex justify-content-center text-warning mb-0">
             <ng-container *ngFor="let item of [].constructor(lang.rating); let i = index">
               <i class="fa fa-star" aria-hidden="true"></i>
