--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,16 @@ hr.divider {
       text-align: -webkit-center;
     }
   }
+  .resume-item{
+    padding: 20px 14px !important;
+    h3{
+      font-size: 16px;
+    }
+  }
+  .timeline-content{
+    font-size: 12px;
+    padding: 0px !important;
+  }
 }
 
 
